Fix gradient behind AppiumConf banner

--- a/css/appium.css
+++ b/css/appium.css
@@ -182,6 +182,7 @@ a:hover {
   max-width: 100%;
   height: auto;
   padding: 0;
+  background: linear-gradient(to right, #f3be48 0%, #f3be48 50%, #ee3c6b 50%, #ee3c6b 100%);
 }
 
 .marketing h1 {
